k8s/networkpolices/auth-db-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: auth-db-networkpolicy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: auth-db
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: chess-auth-service
    ports:
    - protocol: TCP
      port: 3306
