k8s/networkpolices/redis-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-networkpolicy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: chess-room-service
    - podSelector:
        matchLabels:
          app: chess-game-service
    ports:
    - protocol: TCP
      port: 6379
